--- a/treehouse/html/quiz-js.html
+++ b/treehouse/html/quiz-js.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/main.css" />
         <title>Quiz using Conditional Stmts</title>
     </head>
     <body>
         <div>
             <h1>Quiz</h1>
-            <script src="../Quiz.js"></script>
+            <script src="../quiz.js"></script>
         </div>
     </body>
 </html>
