--- a/treehouse/html/random-number-guessing-game-js.html
+++ b/treehouse/html/random-number-guessing-game-js.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/main.css" />
-        <title>Random Number Generator</title>
+        <title>Random Num Guessing Game</title>
     </head>
     <body>
+
         <div class="container">
-            <h1>Random Number Generator</h1>
-        <script src="../random-number.js"></script>
+            <h1>Random Number Guessing Game</h1>
+            <script src="../random-number-guessing-game.js"></script>
         </div>
+
     </body>
 </html>
