--- a/treehouse/html/javascript-basics-js.html
+++ b/treehouse/html/javascript-basics-js.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h1>JavaScript Basics</h1>
-        <script src="../javascript-basics.js" />
+        <script src="../javascriptBasics.js"></script>
     </div>
     </body>
 </html>
