--- a/int_practice_problems/avgOfArrays_js.html
+++ b/int_practice_problems/avgOfArrays_js.html
@@ -7,19 +7,36 @@
     <body>
 
         <script>
-            /**  Find the average of an array of #'s 1-10:
-             */
-
+            /**  Find the average of an array of #'s 1-10  */
             // get array length, sum values, get average (sum/length)
 
 
+                // vanilla JS:
+
             let values = [1,2,3,4,5,6,7,8,9,10];
-            let sum = values.reduce((previous, current) => current += previous);
+            let sum = 0;
+
+                for (let i = 0; i < values.length; i++) {
+                    sum += values[i];
+                }
+
             let avg = sum / values.length;
 
             console.log(avg);
 
-            // avg = 5.5
+
+
+
+
+            //     // ES6 using .reduce :
+            // let values = [1,2,3,4,5,6,7,8,9,10];
+            // let sum = values.reduce((previous, current) => current += previous);
+            // let avg = sum / values.length;
+            //
+            // console.log(avg);
+            //
+            // // avg = 5.5
+
 
         </script>
 
