--- a/int_practice_problems/avgOfArrays_js.html
+++ b/int_practice_problems/avgOfArrays_js.html
@@ -25,10 +25,10 @@
             console.log(avg);
 
 
+            ////////////////////////////////
 
+                // ES6 using .reduce :
 
-
-            //     // ES6 using .reduce :
             // let values = [1,2,3,4,5,6,7,8,9,10];
             // let sum = values.reduce((previous, current) => current += previous);
             // let avg = sum / values.length;
