finished stringReverse in js

--- a/int_practice_problems/stringReverse_js.html
+++ b/int_practice_problems/stringReverse_js.html
@@ -7,13 +7,21 @@
     <body>
         <script>
 
+        /** Reverse a String in JS */
+        // 1. use split() method to return a new array
+        // 2. use reverse() method to reverse the new array
+        // 3. use join() method to join all elements of array into a string
+        // 4. return the reversed string
 
 
+        function reverseString(str) {
+           return str.split("").reverse().join("");
+        }
 
+        console.log(reverseString("cerissa"));
 
 
 
         </script>
-
     </body>
 </html>
