--- a/int_practice_problems/avgOfArrays_js.html
+++ b/int_practice_problems/avgOfArrays_js.html
@@ -8,10 +8,11 @@
 
         <script>
             /**  Find the average of an array of #'s 1-10  */
-            // get array length, sum values, get average (sum/length)
+            // get array length
+            // sum values
+            // get average (sum/length)
 
-
-                // vanilla JS:
+            // vanilla JS:
 
             let values = [1,2,3,4,5,6,7,8,9,10];
             let sum = 0;
@@ -25,9 +26,9 @@
             console.log(avg);
 
 
-            ////////////////////////////////
+        ////////////////////////////////
 
-                // ES6 using .reduce :
+            //// ES6 using .reduce :
 
             // let values = [1,2,3,4,5,6,7,8,9,10];
             // let sum = values.reduce((previous, current) => current += previous);
